# server-monitor

./: .env.example  .gitignore  Caddyfile  Caddyfile.traefik  DEVELOPMENT.md  README.md  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
agent/: pyproject.toml
agent/installers/: pyinstaller_linux.spec  pyinstaller_windows.spec  server-monitor-agent.service
agent/server_monitor_agent/: __main__.py  client.py  collect.py  collect_linux.py  collect_windows.py  run.py  service_windows.py  snapshot.py  token_store.py
agent/tests/: conftest.py  test_client.py  test_collect_dispatch.py  test_collect_linux.py  test_collect_windows.py  test_run_loop.py  test_service_windows.py  test_snapshot.py  test_systemd_unit.py  test_token_store.py
monitor/: Dockerfile  pyproject.toml
monitor/app/: config.py  deps.py  main.py
monitor/app/api/: agents.py  aliases.py  bookings.py  sse.py  web.py
monitor/app/core/: aliases.py  bookings.py  clock.py  db.py  servers.py  sessions.py  stale.py  tokens.py
monitor/app/static/: app.css  app.js  install.ps1  install.sh  uninstall.ps1  uninstall.sh
monitor/app/templates/: aliases.html  base.html  dashboard.html  enroll.html  server_detail.html
monitor/app/templates/_partials/: alias_row.html  booking_cell.html  booking_modal.html  server_card.html  server_grid.html  sse.html
monitor/tests/: conftest.py  test_aliases_logic.py  test_api_agent_binary.py  test_api_aliases.py  test_api_bookings.py  test_api_enroll.py  test_api_report.py  test_app_smoke.py  test_bookings_logic.py  test_clock.py  test_config.py  test_db.py  test_install_endpoints.py  test_servers_logic.py  test_sessions_logic.py  test_sse_broadcaster.py  test_stale.py  test_tokens.py  test_web_aliases.py  test_web_dashboard.py  test_web_enroll.py  test_web_reset.py  test_web_server_detail.py  test_web_smoke.py  test_web_sse_smoke.py
scripts/: build_agents.sh  (+1 more)
(+4 files in other folders)
