[project]
name = "server-monitor-workspace"
version = "0.0.0"
description = "Workspace root — pulls in monitor and agent in editable mode for tests."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["monitor/tests", "agent/tests"]
asyncio_mode = "auto"
# --import-mode=importlib avoids module-path collisions between
# monitor/tests/conftest.py and agent/tests/conftest.py (both would otherwise
# resolve to `tests.conftest`).
addopts = "-q --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"
